--- a/backend/api/templates/api/myprofile.html
+++ b/backend/api/templates/api/myprofile.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">  <title>MP store</title>
+    <title>My Profile</title>
 </head>
 <body>
   {% include 'navbar.html' %}
-  {% include 'footer.html' %}
+    <h1>My Profile</h1>
+    <p>First Name: {{ firstname }}</p>
+    <p>Last Name: {{ lastname }}</p>
+    <p>Description: {{ description }}</p>
+    <p>Registered In: {{ registered_in }}</p>
+    <p>Groups: 
+        <ul>
+            {% for group in groups %}
+                <li>{{ group.name }}</li>
+            {% endfor %}
+        </ul>
+    </p>
+    {% include 'footer.html' %}
 </body>
 </html>
